--- a/helloworld.html
+++ b/helloworld.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hello world!e</title>
+    <title>Hello world!</title>
   </head>
   <body>
     <h1>This is the body</h1>
